React的Portals将内容挂载到其他DOM上；Modal案例

--- a/React18全家桶+Hooks+项目实战-coderwhy2022系统课/05_learn_scaffold/public/index.html
+++ b/React18全家桶+Hooks+项目实战-coderwhy2022系统课/05_learn_scaffold/public/index.html
@@ -10,11 +10,21 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>React App</title>
+  <style>
+    #modal {
+      position: fixed;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+  </style>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <div id="why"></div>
+  <div id="modal"></div>
 </body>
 
 </html>
